--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,10 @@
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/Gymcrm?useSSL=false&serverTimezone=UTC
-    username: pablo
-    password: asd123
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: password
+    initialization-mode: always
 
   jpa:
     properties:
@@ -11,6 +12,6 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 
 
