--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
 spring:
+  h2:
+    console:
+      enabled: true
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
     username: sa
-    password: password
     initialization-mode: always
 
   jpa:
@@ -11,7 +13,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
         show-sql: true
-    hibernate:
-      ddl-auto: create
+        ddl-auto: update
 
 
