--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,13 +6,14 @@ spring:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:testdb
     username: sa
+    password: sa
     initialization-mode: always
 
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.H2Dialect
         show-sql: true
-        ddl-auto: update
+        ddl-auto: create
 
 
